# NGIO_AutomationSuite

./: .gitignore  BUILD_GUIDE.md  CLAUDE.md  CONSOLIDATION_COMPLETE_v1.4.0.md  CRITICAL_RAM_PAGEFILE_UPDATE.md  DEVELOPER_SETUP.md  DEVELOPMENT_NOTES.md  DOCS_REVIEW.md  IMPROVEMENT_ROADMAP.md  MANIFEST.in  NGIO_RESEARCH_FINDINGS.md  PROJECT_KNOWLEDGE.md  README.md  READY_FOR_RELEASE_v1.5.1.md  USER_REQUIREMENTS.md  WARP.md  build.bat  build_release.py  ngio_automation.spec  ngio_automation_runner.py  pyproject.toml  requirements.txt  run_ngio_automation.bat  setup.py  test_build_readiness.py
docs/: BUILD_SYSTEM_SUMMARY.txt  DETECTION_MECHANISMS.md  LARGE_LOAD_ORDER_GUIDE.md  NEXUS_BRIEF_DESCRIPTION.txt  NEXUS_DESCRIPTION_BBCODE.txt  NEXUS_DOCUMENTATION.txt  OVERNIGHT_MODE_MARKETING.txt  PROJECT_KNOWLEDGE_v1.5.1_UPDATE.txt  USER_FEEDBACK_INSIGHTS.md  V1.1.0_RELEASE_NOTES.md  V1.3.0_RELEASE_NOTES.md  V1.5.0_RELEASE_NOTES.md  V1.6.0_RELEASE_NOTES.md  VERSION_MANAGEMENT.md
release/: CHECKSUMS_SHA256.txt  README.txt  release_info.json
release/NGIO_Automation_Suite_v1.5.0_Release/NGIO_Automation_Suite_v1.5.0_Release/: QUICK_START.txt
release/NGIO_Automation_Suite_v1.5.0_Release/NGIO_Automation_Suite_v1.5.0_Release/docs/: NEXUS_DOCUMENTATION.txt  PAGEFILE_SETUP_GUIDE.txt  V1.5.1_RELEASE_NOTES.md
release/ngio-automation-suite-1.0.0-bundled/: LICENSE  README.md  ngio_automation_runner.py  start_ngio_automation.bat
release/ngio-automation-suite-1.0.0-bundled/docs/: DETECTION_MECHANISMS.md  NEXUS_BRIEF_DESCRIPTION.txt  NEXUS_DESCRIPTION_BBCODE.txt  SEASON_SELECTION_GUIDE.md
release/ngio-automation-suite-1.0.0-bundled/src/core/: automation_suite.py  file_processor.py
scripts/: run_automation.bat
src/: __version__.py
src/core/: archive_creator.py  automation_suite.py  config_manager.py  file_processor.py  game_manager.py  progress_monitor.py
src/utils/: config_cache.py  config_loader.py  console_formatter.py  crash_analyzer.py  error_handler.py  grass_profiles.py  logger.py  notifications.py  progress_estimator.py  skyrim_detector.py  state_manager.py  system_validator.py  task_scheduler.py
