[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ngio-automation-suite"
version = "1.6.0"
authors = [
    {name = "Dudu"},
]
description = "Automated grass cache generation for Skyrim SE"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Games/Entertainment",
    "Topic :: Utilities",
    "Topic :: System :: Systems Administration",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: Microsoft :: Windows",
]
keywords = ["skyrim", "modding", "grass cache", "ngio", "automation", "seasonal", "game modding"]
dependencies = [
    "psutil>=5.8.0",
    "colorama>=0.4.4",
]

[project.urls]
Homepage = "https://github.com/ReidenXerx/NGIO_AutomationSuite"
"Bug Tracker" = "https://github.com/ReidenXerx/NGIO_AutomationSuite/issues"
Documentation = "https://github.com/ReidenXerx/NGIO_AutomationSuite/blob/main/docs/"
"Source Code" = "https://github.com/ReidenXerx/NGIO_AutomationSuite"
"Nexus Mods" = "https://www.nexusmods.com/skyrimspecialedition/mods/<NEXUS_MOD_ID>"

[project.scripts]
ngio-automation = "ngio_automation_runner:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.package-data]
"*" = ["*.txt", "*.md", "*.ini", "*.json"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
